--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
       <id>hibernatesqlite-maven</id>
       <url>https://hibernate-sqlite.googlecode.com/svn/trunk/mavenrepo</url>
     </repository>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
   </repositories>
 
   <developers>
@@ -253,6 +257,26 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.HayateLaTech</groupId>
+      <artifactId>OAuth2Discord</artifactId>
+      <version>1</version>
+    </dependency>
+    <dependency>
+        <groupId>postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.1-901-1.jdbc4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.8.3</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>4.0</version>
@@ -320,9 +344,9 @@
       <version>1.2.17</version>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>8.4-702.jdbc3</version>
+      <version>42.2.4</version>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
